@@ -1,3 +1,9 @@
+2001-04-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* transports/smtp/getmxrr.c:
+	    If destination has one MX, and lookup for its A yields
+	    EAI_AGAIN, remember to report SS->mxcount = 0 ...
+
 2001-04-03  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* proto/forms/delivery:
